[package]
name = "donutbingo"
version = "0.1.0"
description = "Created with Anchor & Love ;)"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "donutbingo"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.10.30"
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
mpl-token-metadata = {version = "1.2.5", features = ["no-entrypoint"]}
spl-token = {version = "3.3.0", features = ["no-entrypoint"]}

